--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
 *.pyc
-principal/estoque/refresh_token.json
